# 5b

./: CMakeLists.txt  main.c
libs/algorithms/: CMakeLists.txt
libs/algorithms/algorithms/: algorithm.c  algorithm.h
libs/algorithms/array/: array.c  array.h
libs/data_structures/: CMakeLists.txt
libs/data_structures/List/: list.c
libs/data_structures/fraction/: fraction.c  fraction.h
libs/data_structures/matrix/: matrix.c  matrix.h  matrix_test.c  matrix_test.h
libs/data_structures/pain/: pain.c  pain.h
libs/data_structures/string/: string_.c  string_.h
libs/data_structures/string/tasks/: addLastWordsSecondStringToFirstString.h  allTasks.h  areLettersFirstWordInSecondString.h  areWordsFromSameLetters.h  changingWords.h  countOfPalindorme.h  deleteMatchesWithTheLastWord.h  digitToStartWithoutChangingTheOrder.h  getWordBeforeFirstWordWithA.h  hasEqualWords.h  isWordsOrdered.h  lastOfWordsOfTheFirstStringInTheSecondString.h  removeAdjacentEqualLetters.h  removeExtraSpaces.h  removeNonLetters.h  reverseWord.h  reverseWordsInString.h  spaceAfterEveryFigure.h
libs/data_structures/vector/: vector.c  vector.h  vectorVoid.c  vectorVoid.h
